@@ -57,7 +57,7 @@ class ConverterTest{
 		@Override
 		public byte[] encode(final String value){
 			final List<String> components = StringHelper.split(value, '.');
-			return new byte[]{Byte.parseByte(components.getFirst()), Byte.parseByte(components.get(1))};
+			return new byte[]{Byte.parseByte(components.get(0)), Byte.parseByte(components.get(1))};
 		}
 	}
 
